--- a/extras/python/CMakeLists.txt
+++ b/extras/python/CMakeLists.txt
@@ -1,45 +1,28 @@
 find_package(PythonLibs REQUIRED)
+find_package(PythonInterp REQUIRED)
 include_directories(${PYTHON_INCLUDE_PATH})
 
 # Files to install with Python
-file(GLOB CPP_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/src/*.c)
 file(GLOB CPP_INCLUDE_FILES ${CMAKE_SOURCE_DIR}/include/*.h)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-#file(COPY ${CPP_SOURCE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src)
-#file(COPY ${CPP_INCLUDE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)
-#file(COPY ${SWIG_INTERFACE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 # Configure setup.py and copy to output directory
 set(SETUP_PY_IN ${CMAKE_CURRENT_SOURCE_DIR}/setup.in.py)
 set(SETUP_PY_OUT ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
 configure_file(${SETUP_PY_IN} ${SETUP_PY_OUT})
-     #file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/setup.py
-     #        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # Install target to call setup.py
-MESSAGE(${CPP_SOURCE_FILES})
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/src)
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
-#configure_file(${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}/)
-#foreach(FILE ${CPP_SOURCE_FILES})
-#    get_filename_component(F ${FILE} NAME)
-#    # MESSAGE(${F})
-#    # MESSAGE(${CMAKE_CURRENT_BINARY_DIR})
-#    # MESSAGE(${CMAKE_SOURCE_DIR}/src/${F})
-#    # MESSAGE(${CMAKE_CURRENT_BINARY_DIR}/src/${F})
-#    MESSAGE("COPYING ${F}")
-#    configure_file(${CMAKE_SOURCE_DIR}/src/${F} ${CMAKE_CURRENT_BINARY_DIR}/src/${F})
-#endforeach()
-#foreach(FILE ${CPP_INCLUDE_FILES})
-#    get_filename_component(F ${FILE} NAME)
-#    configure_file(${CMAKE_SOURCE_DIR}/include/${F} ${CMAKE_CURRENT_BINARY_DIR}/include/${F})
-#endforeach()
-
-set_source_files_properties(../SWIG/${PROJECT_NAME}.i PROPERTIES CPLUSPLUS ON)
-swig_add_library(titanlib2 TYPE SHARED LANGUAGE python SOURCES ../SWIG/${PROJECT_NAME}.i)
-set_target_properties(_titanlib2 PROPERTIES LINKER_LANGUAGE CXX)
+# set_source_files_properties(../SWIG/${PROJECT_NAME}.i PROPERTIES CPLUSPLUS ON)
+# swig_add_library(titanlib2 TYPE SHARED LANGUAGE python SOURCES ../SWIG/${PROJECT_NAME}.i)
+# set_target_properties(_titanlib2 PROPERTIES LINKER_LANGUAGE CXX)
 add_custom_target(package-python
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/README.md ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include)
-add_dependencies(package-python _titanlib2)
+    COMMAND ${CMAKE_COMMAND} -E copy ${SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/src
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
+    COMMAND ${SWIG_EXECUTABLE} -python -outdir ${CMAKE_CURRENT_BINARY_DIR} -c++ -I./include -o ${CMAKE_CURRENT_BINARY_DIR}/titanlibPYTHON_wrap.cxx ${SWIG_INTERFACE}
+    COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY_OUT} sdist --dist-dir ${CMAKE_BINARY_DIR}
+    )
+# add_dependencies(package-python _titanlib2)
