--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,11 @@ jobs:
             python-version: '3.7'
       - name: dependencies
         run: |
-            sudo apt update -qq
-            sudo apt install swig libboost-dev libgsl-dev cmake python3-setuptools python3-numpy python3-pip lcov
+        sudo apt update -qq
+        sudo apt install swig doxygen r-base-core libboost-dev cmake libgsl-dev python3-setuptools python3-nose python3-numpy python3-scipy
       - name: configure
-        run: mkdir build && cd build && cmake -DBUILD_R=no -DCMAKE_BUILD_TYPE=DEBUG ..
+        run: mkdir build && cd build && cmake ..
       - name: build
-        run: cd build && VERBOSE=1 make develop-python-user
+        run: cd build && make && sudo make install-python
       - name: test
-        run: |
-            cd build
-            /usr/bin/python3 -m pip install coverage nose
-            make tests
-            lcov --directory CMakeFiles/gridpp.dir/src/api --capture --output-file coverage.info
-            lcov --remove coverage.info '/usr/*' --output-file coverage.info
-            lcov --list coverage.info
-            # - name: test
-            # run: |
-            # /usr/bin/python3 -c "import gridpp; print(gridpp.version())"
-            # /usr/bin/python3 -m pip install --upgrade pip
-            # /usr/bin/python3 -m pip install coverage nose
-            # coverage run --omit */*-packages/*,*tests* -m nose
-            # coverage report
+        run: nosetests3
