--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - name: Install numpy
-        run: python -m pip install numpy
+        run: python -m pip install numpy setuptools
 
       - run: bash swig/python-packaging/setup.sh
       - uses: actions/upload-artifact@v2
