--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -5,6 +5,8 @@ on:
   push:
     tags:
       - '*'
+    branches:
+      - package
 
 jobs:
   setup:
@@ -17,7 +19,7 @@ jobs:
         run: python -m pip install numpy setuptools
 
       - run: bash swig/python-packaging/setup.sh
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: my-artifact
           path: build/swig/python-packaging/
@@ -31,15 +33,15 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-20.04, windows-2019, macos-11]
-        os: [ubuntu-20.04, macos-11]
+        os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.13.1
+        run: python -m pip install cibuildwheel==2.22.0
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4.1.7
         with:
           name: my-artifact
 
@@ -49,10 +51,12 @@ jobs:
           # Use boost 1_72, since this allows c++11. We need c++11, since manylinux2014 only has gcc 4.8
           # Can't use boost 1.53 (default on linux) because it doesn't have rtree functionality
           # CIBW_BUILD: cp36-manylinux_x86_64 cp36-win_amd64 cp36-macosx_x86_64
+          # CIBW_BUILD: cp313-manylinux_x86_64 #  cp310-manylinux_x86_64
           # CIBW_BUILD: cp310-macosx_x86_64
           # PyPy compilation on MACOS doesn't work, possibly since there is no available numpy release for this
           # Armadillo isn't available for i687 on Centos 7, making compilation more complicated
-          CIBW_SKIP: pp*-macosx* *i686* *musllinux*
+          # # Musllinux doesn't use yum as its package manager
+          CIBW_SKIP: pp*-macosx* *i686* *musllinux* *p36* *p37* *p38* pp*
           CIBW_BEFORE_ALL_LINUX: |
               yum install -y lapack-devel gsl-devel armadillo-devel
               curl -L -O https://boostorg.jfrog.io/artifactory/main/release/1.72.0/source/boost_1_72_0.tar.gz
@@ -76,7 +80,7 @@ jobs:
           CIBW_TEST_COMMAND: >
               python {project}/tests/check_installation.py
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: ./wheelhouse/*.whl
@@ -87,7 +91,7 @@ jobs:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4.1.7
         with:
           name: wheels
           path: wheelhouse
