--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -33,7 +33,8 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-20.04, windows-2019, macos-11]
-        os: [ubuntu-20.04]
+        os: [macos-14]
+        # os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
@@ -56,7 +57,8 @@ jobs:
           # PyPy compilation on MACOS doesn't work, possibly since there is no available numpy release for this
           # Armadillo isn't available for i687 on Centos 7, making compilation more complicated
           # # Musllinux doesn't use yum as its package manager
-          CIBW_SKIP: pp*-macosx* *i686* *musllinux* *p36* *p37* *p38* pp*
+          # CIBW_SKIP: pp*-macosx* *i686* *musllinux* *p36* *p37* *p38* pp*
+          CIBW_BUILD: cp310-macosx_arm64
           CIBW_BEFORE_ALL_LINUX: |
               yum install -y lapack-devel gsl-devel armadillo-devel
               curl -L -O https://archives.boost.io/release/1.72.0/source/boost_1_72_0.tar.gz
@@ -66,16 +68,17 @@ jobs:
           CIBW_BEFORE_ALL_MACOS: |
               # Other than the latest version, Brew only has boost 1.76. Therefore we must install boost from source
               # brew reinstall gcc lapack gsl armadillo
-              brew reinstall lapack gsl armadillo
-              curl -L -O https://archives.boost.io/release/1.72.0/source/boost_1_72_0.tar.gz
-              tar -xf boost_1_72_0.tar.gz
-              cd boost_1_72_0
-              cp -r boost /usr/local/include
+              pwd
+              brew reinstall lapack gsl armadillo boost
+              #curl -L -O https://archives.boost.io/release/1.72.0/source/boost_1_72_0.tar.gz
+              #tar -xf boost_1_72_0.tar.gz
+              #cd boost_1_72_0
+              #sudo cp -r boost /usr/local/include
               # Link in gcc, otherwise the default Apple compiler will be used, which doesn't support openmp by default
               # ln -s /usr/local/bin/gcc-13 /usr/local/bin/gcc
               # ln -s /usr/local/bin/g++-13 /usr/local/bin/g++
           # CIBW_ENVIRONMENT_MACOS: CC='/usr/local/bin/gcc' LDSHARED='/usr/local/bin/gcc' CXX='/usr/local/bin/g++'
-          CIBW_ENVIRONMENT_MACOS: CFLAGS='-Wno-c++11-narrowing'
+          CIBW_ENVIRONMENT_MACOS: CFLAGS='-Wno-c++11-narrowing' LDFLAGS='-L/opt/homebrew/lib' CPPFLAGS='-I/opt/homebrew/include -std=c++14'
           CIBW_BEFORE_ALL_WINDOWS: choco install -y lapack-devel
           CIBW_TEST_COMMAND: >
               python {project}/tests/check_installation.py
