--- a/swig/python-packaging/pyproject.toml
+++ b/swig/python-packaging/pyproject.toml
@@ -4,7 +4,8 @@ requires = [
     "wheel",
     "Cython",
     "numpy==1.12.1; python_version<'3.5'",
-    "oldest-supported-numpy; python_version>='3.5'",
+    "oldest-supported-numpy; python_version>='3.5' and python_version<'3.9'",
+    "numpy==2.0.2; python_version>='3.9'",
 ]
 
 build-backend = "setuptools.build_meta"
